# ZEDPROXYBOT

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: initial_schema.py
app/: main.py
app/api/: main.py
app/bot/: app.py  main.py  states.py  utils.py
app/bot/handlers/: admin.py  common.py  growth.py  orders.py  payments.py  products.py  profile.py  start.py  tickets.py  tutorials.py  vpn_services.py  wallet.py
app/bot/handlers/admin/: dashboard.py  payments.py
app/bot/keyboards/: admin.py  user.py
app/core/: config.py
app/db/: init_db.py  session.py
app/models/: base.py  entities.py
app/services/features/: catalog.py
app/services/reports/: service.py
app/services/vpn/: provisioning.py
app/services/vpn/adapters/: base.py  sanaei_3xui.py
app/web/templates/: dashboard.html  login.html
deploy/nginx/: default.conf
scripts/: backup.sh  restore.sh  update.sh
