[project]
name = "zedproxybot"
version = "0.1.0"
description = "ربات فروش VPN فارسی با aiogram و FastAPI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.29.0",
  "alembic>=1.14.0",
  "redis>=5.2.1",
  "aiogram>=3.13.1",
  "httpx>=0.27.2",
  "python-dotenv>=1.0.1",
  "pydantic-settings>=2.6.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "jinja2>=3.1.4",
  "qrcode[pil]>=7.4.2",
  "structlog>=24.4.0"
]

[tool.setuptools]
packages = ["app"]
